[gd_scene load_steps=8 format=3 uid="uid://b1mvxscxvfbwf"]

[ext_resource type="Script" path="res://stat_points.gd" id="1_s73qq"]

[sub_resource type="Gradient" id="Gradient_mo2ne"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_k3jtb"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8i5ls"]
width = 256
height = 24
color_ramp = SubResource("Gradient_mo2ne")
noise = SubResource("FastNoiseLite_k3jtb")

[sub_resource type="Gradient" id="Gradient_0jpq0"]
colors = PackedColorArray(0.525025, 0.484075, 0, 1, 0.421532, 0.368354, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nnfvb"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_i3108"]
width = 256
height = 24
color_ramp = SubResource("Gradient_0jpq0")
noise = SubResource("FastNoiseLite_nnfvb")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s73qq")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ExperienceBar" type="TextureProgressBar" parent="."]
offset_left = 137.0
offset_top = -229.0
offset_right = 393.0
offset_bottom = -189.0
texture_under = SubResource("NoiseTexture2D_8i5ls")
texture_progress = SubResource("NoiseTexture2D_i3108")

[node name="ExperienceLabel" type="Label" parent="."]
offset_left = 146.0
offset_top = -258.0
offset_right = 186.0
offset_bottom = -235.0
text = "EXP: "

[node name="LevelLabel" type="Label" parent="."]
offset_left = 139.0
offset_top = -171.0
offset_right = 184.0
offset_bottom = -148.0
text = "Level:"

[node name="SkillPointsLabel" type="Label" parent="."]
offset_left = 122.0
offset_top = -83.0
offset_right = 285.0
offset_bottom = -60.0
text = "Skill Points Available:"

[node name="StrengthLabel" type="Label" parent="."]
offset_left = 165.0
offset_top = -33.0
offset_right = 237.0
offset_bottom = -10.0
text = "Strength:"

[node name="SpeedLabel" type="Label" parent="."]
offset_left = 174.0
offset_top = 11.0
offset_right = 226.0
offset_bottom = 34.0
text = "Speed:"

[node name="WisdomLabel" type="Label" parent="."]
offset_left = 168.0
offset_top = 53.0
offset_right = 235.0
offset_bottom = 76.0
text = "Wisdom:"

[node name="MaxHPLabel" type="Label" parent="."]
offset_left = 169.0
offset_top = 99.0
offset_right = 233.0
offset_bottom = 122.0
text = "MaxHP: "

[node name="MaxMPLabel" type="Label" parent="."]
offset_left = 170.0
offset_top = 147.0
offset_right = 237.0
offset_bottom = 170.0
text = "MaxMP: "

[node name="AddStrengthButton" type="Button" parent="."]
offset_left = 104.0
offset_top = -35.0
offset_right = 143.0
offset_bottom = -4.0
text = "Add"

[node name="AddSpeedButton" type="Button" parent="."]
offset_left = 105.0
offset_top = 7.0
offset_right = 144.0
offset_bottom = 38.0
text = "Add"

[node name="AddWisdomButton" type="Button" parent="."]
offset_left = 104.0
offset_top = 50.0
offset_right = 143.0
offset_bottom = 81.0
text = "Add"

[node name="AddMaxHPButton" type="Button" parent="."]
offset_left = 103.0
offset_top = 96.0
offset_right = 142.0
offset_bottom = 127.0
text = "Add"

[node name="AddMaxMPButton" type="Button" parent="."]
offset_left = 104.0
offset_top = 144.0
offset_right = 143.0
offset_bottom = 175.0
text = "Add"

[node name="StabSkillButton" type="Button" parent="."]
offset_left = -437.0
offset_top = -241.0
offset_right = -394.0
offset_bottom = -210.0
tooltip_text = "Each skill point in Stab increases its damage by 10%"
text = "Stab"

[node name="StabSkillLabel" type="Label" parent="."]
offset_left = -362.0
offset_top = -236.0
offset_right = -292.0
offset_bottom = -213.0
text = "Stab Skill"

[node name="StarsSkillButton" type="Button" parent="."]
offset_left = -173.0
offset_top = -242.0
offset_right = -125.0
offset_bottom = -211.0
text = "Stars"

[node name="StarsSkillLabel" type="Label" parent="."]
offset_left = -103.0
offset_top = -238.0
offset_right = -28.0
offset_bottom = -215.0
tooltip_text = "Each skill points in Stars increases its damage by 20%"
text = "Stars Skill"

[node name="StrengthSlashSkillButton" type="Button" parent="."]
offset_left = -554.0
offset_top = -157.0
offset_right = -434.0
offset_bottom = -126.0
disabled = true
text = "Strength Slash"

[node name="SpeedSlashSkillButton" type="Button" parent="."]
offset_left = -402.0
offset_top = -157.0
offset_right = -302.0
offset_bottom = -126.0
disabled = true
text = "Speed Slash"

[node name="EnergyBlastSkillButton" type="Button" parent="."]
offset_left = -260.0
offset_top = -156.0
offset_right = -156.0
offset_bottom = -125.0
disabled = true
text = "Energy Blast"

[node name="MultiBlastSkillButton" type="Button" parent="."]
offset_left = -127.0
offset_top = -155.0
offset_right = -36.0
offset_bottom = -124.0
disabled = true
text = "Multi Blast"

[node name="AbilityPointsLabel" type="Label" parent="."]
offset_left = -349.0
offset_top = -290.0
offset_right = -243.0
offset_bottom = -267.0
text = "Ability Points:"

[node name="NextCombatButton" type="Button" parent="."]
offset_left = 91.0
offset_top = 232.0
offset_right = 201.0
offset_bottom = 263.0
text = "Go to Next Combat"

[node name="ShopButton" type="Button" parent="."]
offset_left = -175.0
offset_top = 232.0
offset_right = -82.0
offset_bottom = 263.0
text = "Go to Shop"

[node name="Label" type="Label" parent="."]
offset_left = -504.0
offset_top = 46.0
offset_right = -119.0
offset_bottom = 95.0
text = "When you level up the exp bar in the top right will
show you how much is needed to the next level
You will get 3 skill points to spend, and 1 ability point 
to spend
Additionally you can go to the shop but all they are
currently selling is potions.....for now"
